--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "italy =  # 'Italy'\n",
+    "italy = countrie # 'Italy'\n",
     "italy"
    ]
   },
