automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "italy = countrie # 'Italy'\n",
+    "italy = countries[-3] # 'Italy'\n",
     "italy"
    ]
   },
