--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    },
    "outputs": [],
    "source": [
-    "kindof_neighbors = countries[2\n",
+    "kindof_neighbors = countries[2:6]\n",
     "kindof_neighbors"
    ]
   },
