automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    },
    "outputs": [],
    "source": [
-    "None # countries.append('Malt"
+    "None # countries.append('Malta')"
    ]
   },
   {
@@ -237,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "None # add code"
    ]
   },
   {
