--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "None # countries.append("
+    "None # countries.append('Thailand')"
    ]
   },
   {
